styles/personalPortfolio.css
/*Base */
body, header, section, div, nav, article{
    display: block;
    box-sizing: border-box;
}
body, header, section, footer{
    margin: 0;
    padding: 0;
    background-color: white;
    font-family: Roboto, sans-serif;
    font-size: 1em;
}
header{
    width: 100%;
    background-color: rgb(0, 0, 0);
    z-index: 5;
    border-bottom: 2px solid rgb(100, 100, 100);
}
small, h1, h4{
    font-family: Cinzel, sans-serif;
}
small{
    font-size: 0.6em;
    letter-spacing: 2px;
    font-weight: 500;
    padding-right: 1em;
    padding-left: 1em;
}
img{
    max-width: 100%;
}
a{
    display: inline-block;
    text-decoration: none;
}
a:hover{
    background-color: gray;
}

/*layout*/
#header{
    position: fixed;
    height: 2em;
    top: 0;
}
#welcome-section{
    color: white;
    background-color: black;
    min-height: 110vh;
    clip-path: polygon(100% 0, 100% 95%, 30% 100%, 0 95%, 0 0);
}
#about, #contact{
    max-width: 720px;
    margin: auto;
}
@media screen and (min-width: 720px) {
    #grid-container{
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
        grid-template-rows: auto;
        gap: 1em;

    }
}

/*modules*/
.nav-links{
    padding: 0;
}
.nav-link{
    padding: 0.5em 1em;
    color: white;
}
.center{
    display: flex;
    justify-content: center;
    align-items: center;
}
.v-center{
    display: flex;
    flex-direction: column;
}
.r-align{
    text-align: right;
    padding-right: 1em;
}
.colored-text{
    color: red;
}

